--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
+    "html2canvas": "^1.4.1",
     "js-beautify": "^1.15.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.285.0",
