--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "framer-motion": "^10.16.4",
     "html2canvas": "^1.4.1",
     "js-beautify": "^1.15.1",
-    "jspdf": "^2.5.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.285.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
